fix tables to stretch to the full width of the screen

--- a/css/custom.css
+++ b/css/custom.css
@@ -39,3 +39,7 @@
 .phoneNumberSeparator {
   padding: 5px;
 }
+
+.dataTables_wrapper {
+  width: 100%;
+}
